# stationrc

./: .gitignore  README.md  bias_scan.py  bring_up.py  cal_select.py  controller-board-rc.py  daq_run.py  dump_raw_data.py  initial_tune.py  initial_tune_interactive.ipynb  plot_pedestals.py  power_cycle_radiant.py  pyproject.toml  radiant_status.py  radiant_to_upgrade.py  read_pps_counter.py  record_data.py  record_data_nat.py  record_pedestals.py  record_timings.py  restart_radiant_for_daq.py  sig_gen_off.py  sig_gen_on.py  station_status.py  stationrc.py
scripts/data/: daq_run.py  dump_raw_data.py  plot_raw_data.py
scripts/operation/: controller-board-rc.py  record_timings.py  sig_gen_on.py
stationrc/: .gitmodules  README.md  bias_scan.py  bring_up.py  initial_tune.py  power_cycle_radiant.py  pyproject.toml  record_data.py  restart_radiant_for_daq.py  station_status.py  stationrc.py
stationrc/bbb/: ControllerBoard.py  RadiantBoard.py  SerialCOBSDevice.py  Station.py  __init__.py  util.py
stationrc/bbb/conf/: station_conf.json
stationrc/calib/: README
stationrc/common/: Executor.py  RNOGDataFile.py  RawDataFile.py  __init__.py  testDat.ipynb  util.py
stationrc/common/conf/: logging_conf.json  rno-g_data_format.json
stationrc/remote_control/: RADIANTLowLevelInterface.py  RemoteControl.py  Run.py  RunConfig.py  VirtualStation.py  __init__.py  msg.md  tune.py  util.py  utils.py
stationrc/remote_control/conf/: acq.calib.cfg  acq.default.cfg  virtual_station_conf.json  virtual_station_conf_default.json
